# supreme-octopus

./: .gitmodules  CMakeLists.txt  README.md
backend/: .gitignore  Makefile  README.md  go.mod  go.sum
backend/cmd/agify/: main.go
backend/cmd/genderize/: main.go
backend/cmd/images-store/: main.go
backend/cmd/nationalize/: main.go
backend/cmd/supreme-octopus/: main.go
backend/cmd/tzproj/: main.go
backend/configs/: nginx.conf
backend/db/: README.md
backend/db/migrations/: 000001_peoples_table.down.sql  000001_peoples_table.up.sql  000001_users_table.up.sql  000002_genders_table.up.sql  000002_users_credentials_table.up.sql  000003_nationalizations_table.down.sql  000003_nationalizations_table.up.sql  000003_users_tokens_table.down.sql  002_users_credentials_table.sql  003_users_tokens_table.sql
backend/db/migrations_go-migrate/: 000002_users_credentials_table.down.sql  000003_users_tokens_table.up.sql
backend/deployments/: .env  compose.yml
backend/internal/auth/: auth.go  tokens.go
backend/internal/conversions/: conversions.go
backend/internal/db/: db.go  filter.go  requests.go
backend/internal/imagesStore/: images.go  imagesStore.go
backend/internal/model/: model.go
backend/internal/utils/: pow.go  utils.go
backend/internal/vars/: vars.go
backend/pkg/agify/: agify.go
backend/pkg/cryptograph/: cryptograph.go  products.go  randSlice.go
backend/pkg/genderize/: genderize.go
backend/pkg/nationalize/: nationalize.go
backend/pkg/valid/: email.go
backend/pkg/validator/: email.go
containers/: Containerfile-debug  Containerfile-release
deployments/: .env  compose.yml
frontend/: README.md  flake.nix
frontend/app/: bun.lockb  package-lock.json  package.json
frontend/app/src/: App.css  App.js  styles.css
infra/: .env  .gitignore  README.md  compose-old.yml  compose.yml
infra/containers/: nginx_with_static_data.Dockerfile
infra/nginx/: nginx.conf
src/: main.cc
(+75 files in other folders)
